moved constants to notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -40,8 +40,6 @@
    "source": [
     "import matplotlib\n",
     "\n",
-    "from constants import DATASET_DIR, MODEL_FILE, LABEL_BIN, PLOT_FILE, IMAGE_FILE\n",
-    "\n",
     "matplotlib.use(\"Agg\")\n",
     "\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
@@ -92,7 +90,13 @@
     "EPOCHS = 100\n",
     "INIT_LR = 1e-3\n",
     "BS = 32\n",
-    "IMAGE_DIMS = (96, 96, 3)"
+    "IMAGE_DIMS = (96, 96, 3)\n",
+    "\n",
+    "DATASET_DIR = \"dataset\"\n",
+    "MODEL_FILE = \"pokedex.model\"\n",
+    "LABEL_BIN = \"lb.pickle\"\n",
+    "PLOT_FILE = \"plot.png\"\n",
+    "IMAGE_FILE = \"examples/charmander_counter.png\""
    ]
   },
   {
